<resources>

    <string name="app_name">VoiceZero</string>
    <string name="start_listening">Start Listening</string>

    <!-- menu -->
    <string name="share">Share</string>
    <string name="remind">Remind</string>
    <string name="gesture">Gesture</string>
    <string name="setting">Setting</string>
    <string name="coming_soon">Coming Soon</string>

    <string name="part_1">Part one</string>
    <string name="profile">My Profile</string>
    <string name="favorite">My Favorite</string>
    <string name="browse">My Browse</string>
    <string name="theme">Change Theme</string>

    <!-- dialog -->
    <string name="i_know_it">I know it</string>
    <string name="first_use_alert_message">To use the speech recognition function, the need to open the mobile phone network</string>

    <!-- drawerlayout-->
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>

    <!--友盟社会化组件 -->
    <string name="umeng_share_succeed">share succeed</string>
    <string name="umeng_share_failed">share failed</string>
    <string name="umeng_share_canceled">share canceled</string>

    <string name="back">Click back again to exit VoiceZero</string>

</resources>
