<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/part_1">
        <menu>
            <item
                android:id="@+id/nv_profile"
                android:icon="@drawable/ic_face_black_24dp"
                android:title="@string/profile" />
            <item
                android:id="@+id/nv_favorite"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/favorite" />
            <item
                android:id="@+id/nv_browse"
                android:icon="@drawable/ic_visibility_black_24dp"
                android:title="@string/browse" />
            <item
                android:id="@+id/nv_theme"
                android:icon="@drawable/ic_wb_sunny_black_24dp"
                android:title="@string/theme" />

        </menu>
    </item>
</menu>