<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="0"
        android:textColor="@android:color/primary_text_dark"
        android:title="@string/share"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/remind"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:orderInCategory="1"
        android:textColor="@android:color/primary_text_dark"
        android:title="@string/remind"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/gesture"
        android:icon="@drawable/ic_swap_horiz_white_24dp"
        android:orderInCategory="2"
        android:textColor="@android:color/primary_text_dark"
        android:title="@string/gesture"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="3"
        android:textColor="@android:color/primary_text_dark"
        android:title="@string/setting"
        android:visible="true"
        app:showAsAction="always" />
</menu>